# Trixon-SaaS

./: .gitignore  README.md  audit_report.md  docker-compose.yml  hosting_guide.md  product-requirement-document.md  railway.json  render.yaml  schema_update_analytics.sql  supabase_schema.sql  trixon-analytics-admin-prompt.md  trixon-antigravity-prompt-v2.md  trixon-antigravity-prompt-v3.1.md  trixon-antigravity-prompt-v3.5.md  trixon-antigravity-prompt-v3.md  trixon-chat-code-search-fix.md  trixon-cleanup-audit-prompt.md  trixon-consolidate-hosting-prompt.md  trixon-data-flow-inventory.md  trixon-multi-key-pool-prompt.md  trixon-security-review-prompt.md  vercel-recovery-codes.txt
backend/: Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  worker.py
backend/api/: __init__.py  action_items.py  admin_metrics.py  analyses.py  analytics.py  badge.py  chat.py  checkout.py  health.py  profile.py  projects.py  reports.py  repos.py  search.py  share.py  trixon_share.py  vcs.py  webhooks.py
backend/core/: __init__.py  auth.py  config.py  encryption.py  key_pool_client.py  redis_client.py  supabase_client.py
backend/migrations/: v2_bot_realignment.sql
backend/models/: __init__.py  profile.py  vcs.py
backend/services/: __init__.py  action_extractor.py  analytics.py  diff_engine.py  key_pool.py  llm_client.py  repo_fetcher.py  static_extractor.py
backend/services/providers/: gemini.py  groq.py  ollama.py
backend/tests/: conftest.py
backend/tests/api/: test_analyses.py  test_health.py  test_repos.py  (+5 more)
backend/workers/: __init__.py  analyze.py
(+72 files in other folders)
